baza nowe połączenie

--- a/Komunikator nowy/Komunikator/Komunikator/Komunikator.csproj
+++ b/Komunikator nowy/Komunikator/Komunikator/Komunikator.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,6 +51,12 @@
     <Compile Include="Komunikator.Designer.cs">
       <DependentUpon>Komunikator.cs</DependentUpon>
     </Compile>
+    <Compile Include="LinqClasses.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LinqClasses.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="Logic.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,9 +71,13 @@
     <Compile Include="Rejestracja.Designer.cs">
       <DependentUpon>Rejestracja.cs</DependentUpon>
     </Compile>
+    <Compile Include="Usser_info.cs" />
     <EmbeddedResource Include="Komunikator.resx">
       <DependentUpon>Komunikator.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="LinqClasses.dbml.layout">
+      <DependentUpon>LinqClasses.dbml</DependentUpon>
+    </None>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +94,11 @@
     <EmbeddedResource Include="Rejestracja.resx">
       <DependentUpon>Rejestracja.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="LinqClasses.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>LinqClasses.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -110,6 +126,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\avek11.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
